<resources>
    <string name="app_name">Bucket List</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title">Bucket List</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialogtitle">Title</string>
        <string name="main_description">There are no tasks created for today.To create one please click the add button below
    </string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action">Perform action</string>
    <string name="undobar_sample_message" translatable="false">Action performed.</string>
    <string name="title_activity_add__pending">Create a new decision</string>
    <string name="country_prompt" translatable="false">Choose A Country</string>
    <string name="title_activity_trial" translatable="false">trialActivity</string>
    <string name="done">Done</string>
    <string name="title_activity_main_activity2" translatable="false">MainActivity2Activity</string>
    <string name="title_activity_trial_calendar2" translatable="false">trial_calendar2</string>
    <string name="title_activity_trial_calendar3" translatable="false">trial_calendar3</string>
    <string name="title_activity_add_event" translatable="false">AddEvent</string>
    <string name="title_activity_add__event2">Create new event</string>
    <string name="title_activity_alarm" translatable="false">AlarmActivity</string>
    <string name="title_activity_alaram_receiver2" translatable="false">AlaramReceiver2</string>
    <string name="title_activity_add__todo_list">Create ToDo List</string>
    <string name="title_activity_header_trials" translatable="false">Header_trials</string>
    <string name="title_activity_header_trial2" translatable="false">header_trial2</string>
    <string name="loren_ipsum" translatable="false">tristique.</string>
    <string name="title_activity_floating_trials" translatable="false">floating_trials</string>
    <string name="title_activity_xx" translatable="false">xx</string>
    <string name="title_activity_custom_date" translatable="false">CustomDate</string>
    <string name="title_activity_show_list" translatable="false">ShowList</string>
    <string name="title_activity_show_event" translatable="false">ShowEvent</string>
    <string name="title_activity_all_decisions" translatable="false">AllDecisions</string>
    <string name="title_activity_all_events" translatable="false">AllEvents</string>
    <string name="title_activity_all_lists" translatable="false">AllLists</string>
    <string name="title_activity_show_decision" translatable="false">ShowDecision</string>
    <string name="title_activity_all_remainders" translatable="false">AllRemainders</string>
    <string name="title_activity_trial_flaoting" translatable="false">trial_flaoting</string>
    <string name="title_activity_trial_alarm" translatable="false">trial_alarm</string>
    <string name="title_activity_show_remainder" translatable="false">ShowRemainder</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="imageclicking" translatable="false">Please Dont Click the image. It is only for design purposes. Click on buttons below image for navigation.</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="feedback">FeedBack</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="rateus">Rate us</string>
    <string name="about">About</string>
    <string name="gotodate">Go to date</string>
    <string name="home">Home</string>
    <string name="pendingdecisions">Pending Decisions</string>
    <string name="events">Events</string>
    <string name="reminders">Reminders</string>
    <string name="todolists">To-do Lists</string>
    <string name="refresh">Refresh</string>
    <string name="newdecision">Create new decision</string>
    <string name="newevent">Create new event</string>
    <string name="newlist">Create new todo list</string>
    <string name="newreminder">Create new reminder</string>
    <string name="remove">Remove</string>
    <string name="custom">Custom</string>
    <string name="create">CREATE</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="Delete">DELETE</string>
    <string name="go">GO</string>
    <string name="versionno">Version 2.0.0</string>
    <string name="rights">All rights reserved</string>
    <string name="eventtitle">Event title</string>
    <string name="addsubtasks">Enter a subtask</string>
    <string name="location">Location</string>
    <string name="wholeday">Whole Day</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notify">Notify</string>
    <string name="setalarm">Set Alarm  </string>
    <string name="notes">Add Notes</string>
    <string name="notification">Notification</string>
    <string name="description">Description</string>
    <string name="afew">In a Few minutes</string>
    <string name="acustomtime">Select a custom Time</string>
    <string name="anotif">No Notification</string>
    <string name="atenmin">10 minutes before</string>
    <string name="ahalftime">Half an hour before</string>
    <string name="anotonly">Notification Only</string>
    <string name="aalaonly">Alarm Only</string>
    <string name="aalarmnot">Alarm+ Notification</string>
    <string name="important">Important</string>
    <string name="normal">Normal</string>
    <string name="awholeday">Whole Day</string>
    <string name="acustomrange">Select a Time range</string>
    <string name="fromtime">From time</string>
    <string name="fromdate">From date</string>
    <string name="totime">To time</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="call">Call</string>
    <string name="doo">Do</string>
    <string name="send">Send</string>
    <string name="watch">Watch</string>
    <string name="say">Say</string>
    <string name="play">Play</string>
    <string name="phone">Phone No</string>
    <string name="website">Website</string>
    <string name="mailid">Email id</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="faxno">Fax</string>
    <string name="shopname">Shop Name</string>
    <string name="tttile">Title</string>
    <string name="tcreatenot">Create Notification</string>
    <string name="ttype">Type a list item</string>
    <string name="add">Add</string>
    <string name="pwhat">What ?</string>
    <string name="pwhen">When ?</string>
    <string name="phow">How ?</string>
    <string name="pwhy">Why ?</string>
    <string name="pdecision">Decision in a nutshell</string>
    <string name="pexpand">Care to expand</string>
    <string name="premtype">Reminder Type :</string>
    <string name="plean">Leaning Towards : </string>
    <string name="pdecide">Have to decide in : </string>
    <string name="preci">More Precisely in : </string>
    <string name="pwhynot">Why not ?</string>
    <string name="premindat">Remind me at</string>
    <string name="pros">Pros : </string>
    <string name="cons">Cons : </string>
    <string name="pfound">Found a New One ?</string>
    <string name="addme">Add me</string>
    <string name="pdectype">Decision type : </string>
    <string name="deletewarn">The todo list will be permanently deleted</string>
    <string name="event">Event</string>
    <string name="remainder">Reminder</string>
    <string name="note">Notes</string>
    <string name="labelhelp_1" translatable="false">Labels help you to organise your task. You can categorise your tasks into different labels like
    work, to-dos, personal etc thus helping to bring order within your tasks. Also it can help you to find your task much easier.
    Each task can be assigned one label during creation which can be edited any time. You can set one label to be default
    label in settings which will be the default label when creating new tasks. You can change that by clicking on it and choosing
    your new label</string>
    <string name="labeltitle_2" translatable="false">Viewing all your labels</string>
    <string name="labelhelp_2" translatable="false">To go to labels page click on hamburger button on top left corner in home page
        , then choose Labels from navigation screen. \n
    Here all your labels would be listed.</string>
    <string name="labeltitle_3" translatable="false">Creating a new label</string>
    <string name="labelhelp_3" translatable="false">To add a new label first go to labels page by  clicking on the hamburger button on top  left most corner on
        home page, then choose Labels. From the labels page click on the plus button on bottom corner.</string>
    <string name="labeltitle_4" translatable="false">Viewing all tasks in a label</string>
    <string name="labelhelp_4" translatable="false">To view all tasks in a label first go to label manager page click on the hamburger button on top  left most corner on home page,
        then choose Labels. Here you can see a list of labels. To view all tasks in any particular label just click on it.</string>
    <string name="labeltitle_5" translatable="false">Adding a task to a particular label</string>
    <string name="labelhelp_5" translatable="false">To add a task to a particular label either go to the label page from label manager and press the plus button
    on bottom right or while adding new task change the label to the desired one by clicking on label text and choosing your
    desired option.</string>
    <string name="labeltitle_6" translatable="false">Editing a label</string>
    <string name="labelhelp_6" translatable="false">To edit a label click go to label manager and click on more button under the label name. Then click on the
    pencil image to edit your label.</string>
    <string name="labeltitle_7" translatable="false">Deleting a label</string>
    <string name="labelhelp_7" translatable="false">To delete a label go to label manager and click on more button under the label name. Then click on the
    delete button to edit your label. Here you option to decide what to do with the tasks in the label. Either you can delete all tasks in
    that label or assign a new or existing label for those tasks. If no option is chosen then all tasks in that label with be labeless.
    </string>
    <string name="labeltitle_8" translatable="false">Setting default label</string>
    <string name="labelhelp_8" translatable="false">To set a default label go to settings and click on general. Then click on Default Label and choose your
        desired label. This will be used as default option while creating new tasks. You can change label by clicking on it and chosing your new
        label.
    </string>
    <string name="today">Today</string>
    <string name="subtasks">SubTasks</string>
    <string name="addproject">New label name</string>
    <string name="tasks">Tasks</string>
    <string name="project">Labels</string>
    <string name="prodelete_hint2">What to do with all tasks</string>
    <string name="prodelete_hint3">Move to</string>
    <string name="pref_title_task_vibrate_type">Vibrate type</string>
    <string name="pref_title_ringtone">Notification Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_light">Light</string>
    <string name="app_desp">It\'s OK to SLACK!</string>
    <string name="more">More</string>
    <string name="foyohe_tag" translatable="false">Made with \u2665 by foyohe</string>
</resources>