<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="droid.nir.testapp1.AllDecisions">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/more"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/share"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="102"
        android:title="@string/feedback"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"
        android:visible="true"

        />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="104"
        android:title="@string/rateus"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="96"
        android:title="@string/refresh"

        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/about"
        android:visible="false"
        app:showAsAction="never"

        />


    <!-- <item android:id="@+id/menu_action"
         android:title="@string/action"
         app:showAsAction="ifRoom|withText" />-->

    <item
        android:id="@+id/calendarselect"
        android:icon="@drawable/ic_action_go_to_todayw"
        android:orderInCategory="99"
        android:title="@string/gotodate"
        android:visible="false"
        app:showAsAction="ifRoom"

        />

</menu>
