<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/ic_hourglass_empty_black_24dp"
            android:title="@string/pendingdecisions" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/today"
            android:visible="false" />
    </group>


    <item
        android:id="@+id/menu_other"
        android:title="Other">
        <menu>
            <item
                app:actionLayout="@layout/nav_dropdown"
                android:id="@+id/nav_pro"
                android:checkable="true"
                android:icon="@drawable/ic_label_outline_black_24dp"
                android:title="@string/project" />

            <item
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings"
                android:checkable="true"
                android:id="@+id/nav_settings"/>
        </menu>
    </item>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />




</menu>
