<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_task_category_share"
        android:title="@string/share">

        <CheckBoxPreference
            android:title="@string/note"
            android:key="pref_task_share_note"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:title="@string/subtasks"
            android:key="pref_task_share_subtask"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:title="@string/remainder"
            android:key="pref_task_share_reminder"
            android:defaultValue="true"
            />


        </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_task_category_notification"
        android:title="@string/notification">


        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="pref_task_notifications_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_task_notifications_vibrate"
            android:title="@string/pref_title_vibrate" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_vibrate_titles"
            android:entryValues="@array/pref_vibrate_values"
            android:key="pref_task_notifications_vibrate_types"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_task_vibrate_type" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_task_notifications_light"
            android:title="@string/pref_title_light" />

    </PreferenceCategory>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="180"-->
        <!--android:entries="@array/pref_sync_frequency_titles"-->
        <!--android:entryValues="@array/pref_sync_frequency_values"-->
        <!--android:key="sync_frequency"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sync_frequency" />-->

    <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
         <!--design guidelines. &ndash;&gt;-->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

</PreferenceScreen>
