<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="droid.nir.testapp1.noveu.welcome.help.ui.LabelHelp"
    tools:showIn="@layout/activity_label_help">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project"
        style="@style/help_inner_title"/>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        style="@style/help_card"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            style="@style/help_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/desp1"
                style="@style/help_desp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelhelp_1" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards2"
        style="@style/help_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards1"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            style="@style/help_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title2"
                style="@style/help_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labeltitle_2" />


            <TextView
                android:id="@+id/desp2"
                style="@style/help_desp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:text="@string/labelhelp_2" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards3"
        style="@style/help_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards2"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            style="@style/help_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title3"
                style="@style/help_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labeltitle_3" />


            <TextView
                android:id="@+id/desp3"
                style="@style/help_desp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:text="@string/labelhelp_3" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards4"
        style="@style/help_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards3"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            style="@style/help_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title4"
                style="@style/help_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labeltitle_4" />


            <TextView
                android:id="@+id/desp4"
                style="@style/help_desp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelhelp_4" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards4"
        style="@style/help_card"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/help_layout">


            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_subtitle"
                android:text="@string/labeltitle_5" />


            <TextView
                android:id="@+id/desp5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_desp"
                android:text="@string/labelhelp_5" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards5"
        style="@style/help_card"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/help_layout">


            <TextView
                android:id="@+id/title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_subtitle"
                android:text="@string/labeltitle_6" />


            <TextView
                android:id="@+id/desp6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_desp"
                android:text="@string/labelhelp_6" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards6"
        style="@style/help_card"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/help_layout">


            <TextView
                android:id="@+id/title7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_subtitle"
                android:text="@string/labeltitle_7" />


            <TextView
                android:id="@+id/desp7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_desp"
                android:text="@string/labelhelp_7" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/help_cards8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_cards7"
        style="@style/help_card"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/help_layout">


            <TextView
                android:id="@+id/title8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_subtitle"
                android:text="@string/labeltitle_8" />


            <TextView
                android:id="@+id/desp8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/help_desp"
                android:text="@string/labelhelp_8" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
