<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aprimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="droid.nir.testapp1.noveu.welcome.Version"
    tools:showIn="@layout/activity_version">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/about_desp"
        android:id="@+id/about_desp"
        android:text="@string/app_desp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/about_title"
        android:id="@+id/about_title"
        android:layout_above="@id/about_desp"
        android:text="@string/app_name" />



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/koala"
        android:src="@drawable/koala250"
        android:layout_above="@id/about_title"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        style="@style/foyohe_tag"
        android:text="@string/foyohe_tag" />
</RelativeLayout>
